<resources>
    <string name="app_name">MyDollars</string>
    <string name="money_image">Money image</string>
    <string name="current_dollars">Current dollars</string>
    <string name="transactions">Transactions</string>
    <string name="add">Add</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="add_transaction">Add transaction</string>
    <string name="no_transactions">No transactions</string>
</resources>